A couple of QA fixes: spacing for sponsor section, focus on search

--- a/themes/compro_theme/sass/drupal/_entity.scss
+++ b/themes/compro_theme/sass/drupal/_entity.scss
@@ -20,7 +20,6 @@
   color: white;
   display: flex;
   justify-content: space-between;
-  margin: 0 0 60px 0;
   max-height: 500px;
   width: 100%;
 
