--- a/themes/compro_theme/sass/drupal/_node.scss
+++ b/themes/compro_theme/sass/drupal/_node.scss
@@ -288,7 +288,7 @@
   }
 
   .node--type-report-container {
-    margin: 0 auto;
+    margin: 60px auto 0;
     max-width: 1200px;
     padding: 0 40px;
 
